name:                query
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/query#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable query
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Core.Types
                       Deep
                       Expr
                       Expr.Deep    
                       Expr.Expr    
                       Expr.Literal 
                       Expr.Name    
                       Expr.Type    
                       Query
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cereal
                     , conduit
                     , conduit-combinators
                     , containers
                     , hashmap
                     , mtl
                     , monadplus
                     , persistent
                     , persistent-template
                     , recursion-schemes
                     , traverse-with-class
                     , text
